Fix layout bug in Canary

--- a/styles/modules/type.scss
+++ b/styles/modules/type.scss
@@ -1,5 +1,5 @@
 body {
-  font-size: 48px;
+  font-size: 16px;
   font-family: $font, sans-serif;
   color: $text-color;
 }
